<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/my_display_picture"
        android:layout_width="134dp"
        android:layout_height="169dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/age" />


    <TextView
        android:id="@+id/my_appNAme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/material_red_500"
        android:layout_below="@+id/my_display_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_22" />






    <TextView
        android:id="@+id/my_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_appNAme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/OurEmail"
        android:textSize="20sp" />




    <TextView
        android:id="@+id/my_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/Phone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_FeedBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/feedback"
        android:textSize="20sp" />
</RelativeLayout>